--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -15,10 +15,9 @@ textarea {
 
 .center {
   text-align: center;
-}
-
-.center h1 {
-  margin-bottom: 10px;
+  h1{
+  	margin-bottom: 10px;
+  }
 }
 
 /* typography */
@@ -59,12 +58,13 @@ p {
   letter-spacing: -1px;
   padding-top: 9px;
   font-weight: bold;
+  &:hover{
+  	color: #fff;
+  	text-decoration: none;
+  }
 }
 
-#logo:hover {
-  color: #fff;
-  text-decoration: none;
-}
+
 
 /* footer */
 
@@ -73,26 +73,21 @@ footer {
   padding-top: 5px;
   border-top: 1px solid #eaeaea;
   color: #777;
-}
-
-footer a {
-  color: #555;
-}
-
-footer a:hover {
-  color: #222;
-}
-
-footer small {
+  a {
+  	color: #555;
+  	&:hover {
+  		color: #222;
+  	}
+  }
+  small {
   float: left;
-}
-
-footer ul {
+  }
+  ul {
   float: right;
   list-style: none;
-}
-
-footer ul li {
-  float: left;
-  margin-left: 15px;
+  	li {
+  		float: left;
+  		margin-left: 15px;
+	}
+  }
 }
